lingxi-code/tui/tests/snapshots/snapshot_permission_dialogs__bypass_permissions_empty_typed.snap
---
source: tui/tests/snapshot_permission_dialogs.rs
assertion_line: 113
expression: "&frame"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                                      │
│ WARNING: LingXi running in Bypass Permissions mode                                                                                   │
│                                                                                                                                      │
│ In Bypass Permissions mode, LingXi will not ask for your approval before running potentially dangerous commands.                     │
│ This mode should only be used in a sandboxed container/VM that has restricted internet access and can easily be restored if damaged. │
│ By proceeding, you accept all responsibility for actions taken while running in Bypass Permissions mode.                             │
│                                                                                                                                      │
│ Type "yes" + Enter to enable, Esc to cancel:                                                                                         │
│                                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
