lingxi-code/tui/tests/snapshots/snapshot_permission_dialogs__exit_plan_mode_with_5_line_plan.snap
---
source: tui/tests/snapshot_permission_dialogs.rs
assertion_line: 50
expression: "&frame"
---
╭───────────────────────────────╮
│                               │
│ Ready to code?                │
│                               │
│ 1. Read foo.rs                │
│ 2. Refactor bar()             │
│ 3. Add tests                  │
│ 4. Run cargo test             │
│ 5. Commit                     │
│                               │
│ > Yes, manually approve edits │
│   Yes, auto-accept edits      │
│   No, keep planning           │
│                               │
╰───────────────────────────────╯
