lingxi-code/tui/tests/snapshots/snapshot_permission_dialogs__tool_use_confirm_default_state.snap
---
source: tui/tests/snapshot_permission_dialogs.rs
assertion_line: 26
expression: "&frame"
---
╭───────────────────────────────────────────────────────╮
│                                                       │
│ Tool use                                              │
│ Bash(ls -la)                                          │
│ Do you want to proceed?                               │
│                                                       │
│ > Yes                                                 │
│   Yes, and don't ask again for Bash commands in /work │
│   No                                                  │
│                                                       │
╰───────────────────────────────────────────────────────╯
