lingxi-code/tui/tests/snapshots/snapshot_permission_dialogs__tool_use_confirm_edit_shows_diff.snap
---
source: tui/tests/snapshot_permission_dialogs.rs
assertion_line: 56
expression: "&frame"
---
╭───────────────────────────────────────────────────────╮
│                                                       │
│ Tool use                                              │
│ Edit(src/main.rs)                                     │
│ 1 - let x = 1;                                        │
│ 1 + let x = 2;                                        │
│ Do you want to proceed?                               │
│                                                       │
│ > Yes                                                 │
│   Yes, and don't ask again for Edit commands in /work │
│   No                                                  │
│                                                       │
╰───────────────────────────────────────────────────────╯
